--- a/service.html
+++ b/service.html
@@ -107,6 +107,33 @@
   transform: translateY(-11px) rotate(-45deg);
 }
 
+/* Christmas Offer Badge Styles */
+.christmas-offer {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: linear-gradient(45deg, #c41e3a, #228b22);
+  color: white;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  z-index: 10;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  animation: pulse-christmas 2s infinite;
+}
+
+@keyframes pulse-christmas {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+.service-card {
+  position: relative;
+  overflow: hidden;
+}
+
   </style>
 </head>
 
@@ -155,7 +182,8 @@
 
   <div class="grid gap-10 md:grid-cols-3 lg:grid-cols-3">
     <!-- Service Card -->
-    <div class="bg-gradient-to-br from-cyan-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+    <div class="service-card bg-gradient-to-br from-cyan-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-blue-700 mb-4"><i class="fas fa-pencil-ruler"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Graphic Design</h3>
       <p class="text-gray-600 mb-4">From logo design to social media creatives and branding materials — we craft visuals that connect.</p>
@@ -163,14 +191,16 @@
 " class="inline-block bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800 text-sm">Hire Us</a>
     </div>
 
-    <div class="bg-gradient-to-br from-orange-100 to-yellow-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+    <div class="service-card bg-gradient-to-br from-orange-100 to-yellow-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="100">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-yellow-600 mb-4"><i class="fas fa-code"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Web Design & Development</h3>
       <p class="text-gray-600 mb-4">Responsive websites, blogs, portfolios, and systems — all SEO-ready and beautifully built.</p>
       <a href="portfolio.html" class="inline-block bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700 text-sm">View Projects</a>
     </div>
 
-    <div class="bg-gradient-to-br from-green-100 to-lime-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+    <div class="service-card bg-gradient-to-br from-green-100 to-lime-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="200">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-green-600 mb-4"><i class="fas fa-bullhorn"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Social Media Marketing</h3>
       <p class="text-gray-600 mb-4">We strategize and manage your digital presence — content plans, captions, engagement, and ads.</p>
@@ -178,21 +208,24 @@
 " class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 text-sm">Boost My Brand</a>
     </div>
 
-    <div class="bg-gradient-to-br from-pink-100 to-purple-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+    <div class="service-card bg-gradient-to-br from-pink-100 to-purple-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-pink-600 mb-4"><i class="fas fa-lightbulb"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Content Creation</h3>
       <p class="text-gray-600 mb-4">Posters, reels, carousels, intros, digital flyers — content that sparks attention and conversions.</p>
       <a href="portfolio.html" class="inline-block bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 text-sm">See Samples</a>
     </div>
 
-    <div class="bg-gradient-to-br from-red-100 to-pink-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+    <div class="service-card bg-gradient-to-br from-red-100 to-pink-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="100">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-red-600 mb-4"><i class="fas fa-camera-retro"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Photography</h3>
       <p class="text-gray-600 mb-4">Event coverage, portraits, product photography and editing for digital & print display.</p>
       <a href="https://youtu.be/MPG--QQWuL4?si=7cBx37RUBD7TZb-G" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 text-sm">View Gallery</a>
     </div>
 
-    <div class="bg-gradient-to-br from-indigo-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+    <div class="service-card bg-gradient-to-br from-indigo-100 to-blue-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="200">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-indigo-600 mb-4"><i class="fas fa-video"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Videography</h3>
       <p class="text-gray-600 mb-4">Professional filming, editing, reels, YouTube intros, promo clips, and motion graphics.</p>
@@ -200,7 +233,8 @@
 " class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 text-sm">Request Shoot</a>
     </div>
 
-    <div class="bg-gradient-to-br from-yellow-100 to-orange-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up">
+    <div class="service-card bg-gradient-to-br from-yellow-100 to-orange-50 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-orange-600 mb-4"><i class="fas fa-chart-line"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">SEO & Analytics</h3>
       <p class="text-gray-600 mb-4">We help you rank, track performance, and use data-driven insights to grow online visibility.</p>
@@ -208,14 +242,16 @@
 " class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 text-sm">Optimize Site</a>
     </div>
 
-    <div class="bg-gradient-to-br from-gray-100 to-slate-200 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="100">
+    <div class="service-card bg-gradient-to-br from-gray-100 to-slate-200 p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="100">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-gray-700 mb-4"><i class="fas fa-id-badge"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Branding & Identity</h3>
       <p class="text-gray-600 mb-4">We build brands from the ground up — visuals, messaging, mockups, colors, and brand books.</p>
       <a href="#about" class="inline-block bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900 text-sm">Build My Brand</a>
     </div>
 
-    <div class="bg-gradient-to-br from-blue-100 to-white p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500" data-aos="fade-up" data-aos-delay="200">
+    <div class="service-card bg-gradient-to-br from-blue-100 to-white p-6 rounded-xl shadow-xl hover:scale-105 transform transition duration-500 relative" data-aos="fade-up" data-aos-delay="200">
+      <div class="christmas-offer">🎄 40% OFF</div>
       <div class="text-5xl text-blue-500 mb-4"><i class="fas fa-chalkboard-teacher"></i></div>
       <h3 class="text-xl font-bold mb-2 text-gray-800">Training & Mentorship</h3>
       <p class="text-gray-600 mb-4">Join our Free Design Learning Hub to grow your digital and creative skills with mentorship and real projects.</p>
@@ -424,4 +460,3 @@
   </script>
 </body>
 </html>
-
