--- a/about.html
+++ b/about.html
@@ -81,6 +81,9 @@
       height: 40px;
       width: 40px;
       object-fit: contain;
+      border-radius: 50%;
+      border-width: 2px;
+      border-color: rgb(255, 145, 0);
     }
     
     .hamburger-menu {
@@ -154,7 +157,7 @@
       <a href="about.html" class="text-secondary font-semibold">About</a>
       <a href="service.html" class="hover:text-secondary transition-colors">Services</a>
       <a href="portfolio.html" class="hover:text-secondary transition-colors">Portfolio</a>
-      <a href="blog.html" class="hover:text-secondary transition-colors">Blog</a>
+      <a href="resources.html" class="hover:text-secondary transition-colors">Resources</a>
       <a href="shop.html" class="hover:text-secondary transition-colors">Shop</a>
       <a href="contact.html" class="hover:text-secondary transition-colors">Contact</a>
     </nav>
@@ -169,7 +172,7 @@
     <li class="py-2 border-b border-white/20"><a href="about.html" class="block hover:text-dark transition-colors">About</a></li>
     <li class="py-2 border-b border-white/20"><a href="service.html" class="block hover:text-dark transition-colors">Services</a></li>
     <li class="py-2 border-b border-white/20"><a href="portfolio.html" class="block hover:text-dark transition-colors">Portfolio</a></li>
-    <li class="py-2 border-b border-white/20"><a href="blog.html" class="block hover:text-dark transition-colors">Blog</a></li>
+    <li class="py-2 border-b border-white/20"><a href="resources.html" class="block hover:text-dark transition-colors">Resources</a></li>
     <li class="py-2 border-b border-white/20"><a href="shop.html" class="block hover:text-dark transition-colors">Shop</a></li>
     <li class="py-2"><a href="contact.html" class="block hover:text-dark transition-colors">Contact</a></li>
   </ul>
@@ -407,7 +410,8 @@
         <a href="https://www.instagram.com/skopedesigns/" class="hover:text-secondary transition-colors"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary transition-colors"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.pinterest.com/skopedesign91/" class="hover:text-secondary transition-colors"><i class="fab fa-pinterest"></i></a>
-        <a href="https://t.me/skopedesigns" class="hover:text-secondary transition-colors"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://www.youtube.com/@engskope" class="hover:text-secondary" target="_blank" rel="noopener">
+  <i class="fab fa-youtube"></i></a>
       </div>
       <div class="text-sm text-white">&copy; <span id="year"></span> Skope Designs. All rights reserved.</div>
     </div>
