--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <a href="about.html" class="hover:text-secondary">About</a>
       <a href="service.html" class="hover:text-secondary">Services</a>
       <a href="portfolio.html" class="hover:text-secondary">Portfolio</a>
-      <a href="blog.html" class="hover:text-secondary">Blog</a>
+      <a href="resources.html" class="hover:text-secondary">Resources</a>
       <a href="shop.html" class="hover:text-secondary">Shop</a>
       <a href="contact.html" class="hover:text-secondary">Contact</a>
     </nav>
@@ -140,7 +140,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="service.html">Services</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="resources.html">Resources</a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
@@ -153,7 +153,7 @@
       <span>Building Code.</span>
       <span class="text-secondary">Beyond Boundaries.</span>
     </h1>
-    <p class="text-lg md:text-xl mb-10 max-w-2xl">We create stunning digital experiences that elevate your brand.</p>
+    <p class="text-lg md:text-xl mb-10 max-w-2xl">We build high-converting websites and standout brand designs for creators and businesses.</p>
     <div class="flex flex-wrap justify-center gap-4">
       <a href="service.html" class="bg-secondary hover:bg-orange-600 px-8 py-3 rounded-full">Get Started</a>
       <a href="portfolio.html" class="bg-primary hover:bg-cyan-600 px-8 py-3 rounded-full">View Portfolio</a>
@@ -177,7 +177,9 @@
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.pinterest.com/skopedesign91/" class="hover:text-secondary"><i class="fab fa-pinterest"></i></a>
-        <a href="https://telegram.com" class="hover:text-secondary"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://www.youtube.com/@engskope" class="hover:text-secondary" target="_blank" rel="noopener">
+  <i class="fab fa-youtube"></i>
+</a>
       </div>
       <div class="text-sm">&copy; <span id="year"></span> Skope Designs. All rights reserved.</div>
     </div>
