--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
       <a href="about.html" class="hover:text-secondary">About</a>
       <a href="service.html" class="hover:text-secondary">Services</a>
       <a href="portfolio.html" class="hover:text-secondary">Portfolio</a>
-      <a href="blog.html" class="hover:text-secondary">Blog</a>
+      <a href="resources.html" class="hover:text-secondary">Resources</a>
       <a href="shop.html" class="hover:text-secondary">Shop</a>
       <a href="contact.html" class="hover:text-secondary">Contact</a>
     </nav>
@@ -203,7 +203,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="service.html">Services</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="resources.html">Resources</a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
@@ -285,6 +285,9 @@
         <a href="https://x.com/sege_peter79144" target="_blank" class="hover:text-orange-400"><i class="fab fa-twitter"></i></a>
         <a href="https://instagram.com" target="_blank" class="hover:text-orange-400"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" target="_blank" class="hover:text-orange-400"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.youtube.com/@engskope" class="hover:text-secondary" target="_blank" rel="noopener">
+  <i class="fab fa-youtube"></i></a>
+
       </div>
 
       <!-- Embedded Map -->
@@ -547,7 +550,8 @@
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.pinterest.com/skopedesign91/" class="hover:text-secondary"><i class="fab fa-pinterest"></i></a>
-        <a href="https://telegram.com" class="hover:text-secondary"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://www.youtube.com/@engskope" class="hover:text-secondary" target="_blank" rel="noopener">
+  <i class="fab fa-youtube"></i></a>      
       </div>
       <div class="text-sm">&copy; <span id="year"></span> Skope Designs. All rights reserved.</div>
     </div>
