--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
       <a href="about.html" class="hover:text-secondary">About</a>
       <a href="service.html" class="hover:text-secondary">Services</a>
       <a href="portfolio.html" class="hover:text-secondary">Portfolio</a>
-      <a href="blog.html" class="hover:text-secondary">Blog</a>
+      <a href="resources.html" class="hover:text-secondary">Resources</a>
       <a href="shop.html" class="hover:text-secondary">Shop</a>
       <a href="contact.html" class="hover:text-secondary">Contact</a>
     </nav>
@@ -124,7 +124,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="service.html">Services</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="resources.html">Resources</a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
@@ -435,7 +435,8 @@ const projects = [
         <a href="instagram.com" class="hover:text-secondary"><i class="fab fa-instagram"></i></a>
         <a href="https://linkedin.com/in/peter-sege-221831303" class="hover:text-secondary"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.pinterest.com/skopedesign91/" class="hover:text-secondary"><i class="fab fa-pinterest"></i></a>
-        <a href="https://telegram.com" class="hover:text-secondary"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://www.youtube.com/@engskope" class="hover:text-secondary" target="_blank" rel="noopener">
+  <i class="fab fa-youtube"></i></a>
       </div>
       <div class="text-sm">&copy; <span id="year"></span> Skope Designs. All rights reserved.</div>
     </div>
