--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,7 @@
   <meta property="og:url" content="https://www.skopedesigns.co.ke/resources">
   <meta property="og:title" content="Skope Designs Resources Hub | 150+ Design & Development Tools">
   <meta property="og:description" content="Access free design resources, premium software, AI tools, and development resources curated by Skope Designs. Updated weekly.">
-  <meta property="og:image" content="https://img.icons8.com/color/480/000000/design.png">
+  <meta property="og:image" content="https://i.pinimg.com/1200x/f5/09/0b/f5090b3fc794a744cb375798fe9a2926.jpg">
   <meta property="og:site_name" content="Skope Designs">
   
   <!-- Twitter Card SEO -->
@@ -2615,4 +2615,5 @@ const resources = [
     });
   </script>
 </body>
+
 </html>
